fixed logo spacing

--- a/client/src/styles/header.css
+++ b/client/src/styles/header.css
@@ -3,11 +3,12 @@
     flex-wrap: wrap;
     align-items: center;
     background-color: #f6f6f8;
-    border-bottom: 1px solid #ededf0
+    border-bottom: 1px solid #ededf0;
 }
 
 .header__logo {
-    width: 60px;
+    width: 56px;
+    height: 56px;
 }
 
 .header__title {
